# langa

./: .stan.toml  LICENSE  README.md  cabal.project  class.langa  langa.cabal  myc.cabal  syntax.langa  syntax.myc
app/: Ast.hs  Check.hs  Display.hs  Locate.hs  Main.hs  Parse.hs  Token.hs  Tree.hs
examples/: bool.scm
ideas/: ast.scm  ast.txt  class.langa  codegen.txt  draft.langa  draft.scm  draft.txt  types.langa  typing.txt
wasm/: index.html  main.wat
