cabal-version: 2.4
name: langa
version: 0.1.0.0

common common
  default-language: GHC2021
  default-extensions:
    LambdaCase
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
    -Wno-unused-do-bind

executable langa
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Tree
    , Ast
    , Parse
    , Check
    , Locate
    , Display
  build-depends:
    base
    , parss
    , optparse-applicative >= 0.18
    , mtl
    , uniplate
